# _AI-Interviewer_

./: .gitignore  README.md  docker-compose.yml  index.html  main.py
Doc/answers/: answer.txt
Doc/prevQues/: prevq0.txt
Doc/prompts/: evaluation_criteria
Doc/resume_topics/: resume topic.txt
backend/: .env  Dockerfile  LICENSE  main.py  pyproject.toml  requirements.txt
backend/Doc/prevQues/: prevq0.txt
backend/Doc/prompts/: LLMbehave
backend/Resumes/: candidate1.json  candidate2.json  candidate3.json
backend/config/: DB_config.py
backend/myenv/Scripts/: activate  activate.bat  jsondiff
backend/parser/: doc-parse.py
backend/parser/gemini/: gemini.py  geminiprompt.txt
backend/script/: create_table.py  create_table_ans.py  get_data.py  insert_candidate.py  insert_response.py
backend/src/: answer0.txt  audiotranscribe.py  captureaudio.py  db_handler.py  evaluate_score.py  prompt.py  resumetopicextractions.py  speakai.py
frontend/: Dockerfile  default_shadcn_theme.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: App.tsx
frontend/src/app/components/: Hero.tsx  ProcessSection.tsx  TransformationSection.tsx  interviewmodal.tsx
frontend/src/app/services/: interviewService.ts
frontend/src/styles/: fonts.css  theme.css
myenv/: .gitignore
myenv/Scripts/: jsonpatch  jsonpointer
src/: answer0.txt
